--- a/index.html
+++ b/index.html
@@ -33,18 +33,54 @@
               };
               document.body.appendChild(button);
             } else {
-              alert('This browser does not support camera access.');
+              alert('This device does not support WebRTC, which is required for AR.js to work.');
             }
           }
         });
+        document.addEventListener('DOMContentLoaded', function() {
+      console.log('DOMContentLoaded');
 
-        AFRAME.registerComponent('rotate', {
-          tick: function () {
-            this.el.object3D.rotation.x += 0.01;
-            this.el.object3D.rotation.y += 0.01;
-          }
-        });
-    </script>    
+      // Request camera permission
+      var cameraPermission = document.createElement('a-entity');
+      cameraPermission.setAttribute('camera-permission', '');
+      document.querySelector('a-scene').appendChild(cameraPermission);
+
+      // Load AR.js
+      var arjsMarker = document.createElement('script');
+      arjsMarker.setAttribute('src', 'https://cdn.jsdelivr.net/npm/ar.js');
+      document.head.appendChild(arjsMarker);
+
+      // Set up AR.js scene
+      var arjsScene = document.createElement('a-scene');
+      arjsScene.setAttribute('vr-mode-ui', 'enabled: false');
+      arjsScene.setAttribute('embedded', '');
+      document.body.appendChild(arjsScene);
+
+      var arjsMarkerImage = document.createElement('a-marker');
+      arjsMarkerImage.setAttribute('type', 'pattern');
+      arjsMarkerImage.setAttribute('url', 'marker.patt');
+      arjsMarkerImage.setAttribute('id', 'marker');
+      arjsMarkerImage.setAttribute('registerevents', '');
+      arjsScene.appendChild(arjsMarkerImage);
+
+      var arjsCube = document.createElement('a-box');
+      arjsCube.setAttribute('position', '0 0.5 0');
+      arjsCube.setAttribute('material', 'color: yellow');
+      arjsCube.setAttribute('scale', '0.5 0.5 0.5');
+      arjsMarkerImage.appendChild(arjsCube);
+
+      // Add event listener to marker
+      arjsMarkerImage.addEventListener('markerFound', function() {
+        console.log('Marker found');
+        arjsCube.setAttribute('visible', 'true');
+      });
+
+      arjsMarkerImage.addEventListener('markerLost', function() {
+        console.log('Marker lost');
+        arjsCube.setAttribute('visible', 'false');
+      });
+    });
+</script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ar.js"></script>
 </head>
