--- a/index.html
+++ b/index.html
@@ -1,95 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>AR.js Cube</title>
-    <script>
-        AFRAME.registerComponent('camera-permission', {
-          init: function () {
-            var el = this.el;
-            if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-              var button = document.createElement('button');
-              button.innerHTML = 'Grant Camera Access';
-              button.style.position = 'absolute';
-              button.style.zIndex = 9999;
-              button.style.bottom = '30px';
-              button.style.left = '50%';
-              button.style.transform = 'translateX(-50%)';
-              button.onclick = function() {
-                navigator.mediaDevices.getUserMedia({ video: true })
-                  .then(function() {
-                    button.remove();
-                    el.sceneEl.renderer.xr.getSession().then(function (session) {
-                      session.addEventListener('end', function () {
-                        location.reload();
-                      });
-                    });
-                  })
-                  .catch(function (e) {
-                    console.error(e);
-                    alert('Failed to access the camera. Please grant camera permission and try again.');
-                  });
-              };
-              document.body.appendChild(button);
-            } else {
-              alert('This device does not support WebRTC, which is required for AR.js to work.');
-            }
-          }
-        });
-        document.addEventListener('DOMContentLoaded', function() {
-      console.log('DOMContentLoaded');
-
-      // Request camera permission
-      var cameraPermission = document.createElement('a-entity');
-      cameraPermission.setAttribute('camera-permission', '');
-      document.querySelector('a-scene').appendChild(cameraPermission);
-
-      // Load AR.js
-      var arjsMarker = document.createElement('script');
-      arjsMarker.setAttribute('src', 'https://cdn.jsdelivr.net/npm/ar.js');
-      document.head.appendChild(arjsMarker);
-
-      // Set up AR.js scene
-      var arjsScene = document.createElement('a-scene');
-      arjsScene.setAttribute('vr-mode-ui', 'enabled: false');
-      arjsScene.setAttribute('embedded', '');
-      document.body.appendChild(arjsScene);
-
-      var arjsMarkerImage = document.createElement('a-marker');
-      arjsMarkerImage.setAttribute('type', 'pattern');
-      arjsMarkerImage.setAttribute('url', 'marker.patt');
-      arjsMarkerImage.setAttribute('id', 'marker');
-      arjsMarkerImage.setAttribute('registerevents', '');
-      arjsScene.appendChild(arjsMarkerImage);
-
-      var arjsCube = document.createElement('a-box');
-      arjsCube.setAttribute('position', '0 0.5 0');
-      arjsCube.setAttribute('material', 'color: yellow');
-      arjsCube.setAttribute('scale', '0.5 0.5 0.5');
-      arjsMarkerImage.appendChild(arjsCube);
-
-      // Add event listener to marker
-      arjsMarkerImage.addEventListener('markerFound', function() {
-        console.log('Marker found');
-        arjsCube.setAttribute('visible', 'true');
-      });
-
-      arjsMarkerImage.addEventListener('markerLost', function() {
-        console.log('Marker lost');
-        arjsCube.setAttribute('visible', 'false');
-      });
-    });
-</script>
+  <head>
+    <meta charset="utf-8" />
+    <title>AR Cube</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/ar.js"></script>
-</head>
-<body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs='sourceType: webcam;' camera-permission>
-        <a-nft type='nft' url='marker.patt'>
-            <a-box position='0 0.5 0' material='color: green;' rotation='0 45 45' scale='0.4 0.4 0.4' rotate></a-box>
-        </a-nft>
-        <a-entity camera></a-entity>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
+  </head>
+  <body>
+    <a-scene embedded arjs>
+      <a-entity
+        geometry="primitive: box"
+        material="color: red"
+        animation="property: rotation; to: 0 360 0; loop: true; dur: 5000"
+      ></a-entity>
+      <a-marker preset="hiro"></a-marker>
     </a-scene>
-</body>
+  </body>
 </html>
