--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Create an AR scene with AR.js -->
     <a-scene embedded arjs>
       <!-- Create a marker element to track the custom marker -->
-      <a-marker type="pattern" url="path/to/marker-pattern-file.patt">
+      <a-marker type="pattern" url="marker.patt">
         <!-- Create an entity with a red cube and a rotation animation -->
         <a-entity
           geometry="primitive: box"
