--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>AR Cube with Custom Marker and Message</title>
+    <title>AR</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
   </head>
@@ -11,17 +11,16 @@
     <a-scene embedded arjs>
       <!-- Create a marker element to track the custom marker -->
       <a-marker type="pattern" url="marker.patt">
-        <!-- Create an entity with a red cube and a rotation animation -->
-        <a-entity
-          id="my-cube"
-          geometry="primitive: box"
-          material="color: red"
-          scale="0.5 0.5 0.5"
+        <!-- Create an entity with a video and a rotation animation -->
+        <a-video
+          id="my-video"
+          src="video.mp4"
+          scale="1 1 1"
           animation__rotate="property: rotation; to: 0 360 0; loop: true; dur: 5000"
-          event-set__touchstart="_event: touchstart; _target: #my-cube; rotation: 0 0 0"
-          event-set__touchmove="_event: touchmove; _target: #my-cube; rotation: 0 0 0"
-          event-set__touchend="_event: touchend; _target: #my-cube; rotation: 0 0 0"
-        ></a-entity>
+          event-set__touchstart="_event: touchstart; _target: #my-video; rotation: 0 0 0"
+          event-set__touchmove="_event: touchmove; _target: #my-video; rotation: 0 0 0"
+          event-set__touchend="_event: touchend; _target: #my-video; rotation: 0 0 0"
+        ></a-video>
       </a-marker>
 
       <!-- Create a text entity to show a message when the marker is not detected -->
