--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>AR</title>
+    <title>AR Video with Custom Marker and Message</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
   </head>
@@ -11,14 +11,14 @@
     <a-scene embedded arjs>
       <!-- Create a marker element to track the custom marker -->
       <a-marker type="pattern" url="marker.patt">
-        <!-- Create an entity with a video and a rotation animation -->
+        <!-- Create a video entity with a video source -->
         <a-video
-          src="my-video.mp4"
-          width="2"
-          height="2"
-          position="0 0 0"
-          autoplay="true"
-          loop="true"
+          id="my-video"
+          src="video.mp4"
+          scale="0.5 0.5 0.5"
+          event-set__touchstart="_event: touchstart; _target: #my-video; rotation: 0 0 0"
+          event-set__touchmove="_event: touchmove; _target: #my-video; rotation: 0 0 0"
+          event-set__touchend="_event: touchend; _target: #my-video; rotation: 0 0 0"
         ></a-video>
       </a-marker>
 
