--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Create an entity with a custom 3D model -->
         <a-entity
           id="my-model"
-          gltf-model="url(scene.gltf); bind: true"
+          gltf-model="url(scene.gltf)"
           scale="0.03 0.03 0.03"
           position="0 90 0"
         ></a-entity>
