--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <!-- Create an entity with a custom 3D model -->
         <a-entity
           id="my-model"
-          gltf-model="url(scene.gltf)"
-          scale="0.03 0.03 0.03"
-          position="0 90 0"
+          gltf-model="url(my-model.gltf)"
+          scale="0.05 0.05 0.05"
+          position="0 0 0"
         ></a-entity>
       </a-marker>
 
