--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       <a-marker type="pattern" url="marker.patt">
         <!-- Create an entity with a red cube and a rotation animation -->
         <a-entity
-          id="my-cube"
-          gltf-model="url(scene.glb)"
-          scale="0.5 0.5 0.5"
+          id="my-model"
+          gltf-model="url(scene.gltf)"
+          scale="1 1 1"
           rotation="0 0 0"
-          event-set__deviceorientation="_event: deviceorientation; _target: #my-cube; _function: setRotation"
+          event-set__deviceorientation="_event: deviceorientation; _target: #my-model; _function: setRotation; color: blue"
         ></a-entity>
+
       </a-marker>
 
       <!-- Create a text entity to show a message when the marker is not detected -->
